<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/screen_full_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <RelativeLayout
        android:id="@+id/tip_layout_scrool"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@color/black_translucent">

        <LinearLayout
            android:id="@+id/left_layout_scrool"
            android:layout_width="45dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:background="@null"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_image"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/back" />
        </LinearLayout>


        <TextView
            android:id="@+id/real_time_scrool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="50dp"
            android:layout_toLeftOf="@+id/resolution_mode_scrool"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/home_text_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/resolution_mode_scrool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/resulution_1080"
            android:textColor="@color/home_text_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/wifi_statues_scrool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@+id/resolution_mode_scrool"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/wifi_connect_faile"
            android:textColor="@color/home_text_color"
            android:textSize="14sp" />


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/lock_layout_scrool"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerVertical="true"
        android:background="@null"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/lock_layout_image_scrool"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:scaleType="centerInside" />

    </LinearLayout>





    <LinearLayout
        android:id="@+id/bottom_layout_scrool"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@color/black_translucent"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/urgent_record_landspace_scrool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/urgent_record_landspace_image_scrool"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/urgent_record"
                    android:textColor="@color/home_text_color"
                    android:textSize="12sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/setting_volume_scrool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/setting_volume_image_scrool"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/volume_control"
                    android:textColor="@color/home_text_color"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/take_photo_landspace_scrool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/take_photo_landspace_image_scrool"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/take_photo"
                    android:textColor="@color/home_text_color"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/local_video_landspace_scrool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/local_video_landspace_image_scrool"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/local_file"
                    android:textColor="@color/home_text_color"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/sd_file_landspace_scrool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/sd_file_landspace_image_scrool"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/sd_card_file"
                    android:textColor="@color/home_text_color"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>










